// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Snapshots renders correctly when disabled 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md transition duration-150 ease-in-out opacity-50 cursor-not-allowed"
      disabled={true}
      id="input-4yj50wr"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly when readonly 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-7fvv8nu"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly when required 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-9okbwnh"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={true}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with autoCapitalize 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      autoCapitalize="none"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-ybhgpyt"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with autoCorrect 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      autoCorrect="off"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-s6r26i7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with autocomplete 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      autoComplete="email"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-ck18vt7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with both icons 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400 dark:text-gray-500 pointer-events-none"
    >
      <span
        data-testid="left-icon"
      >
        @
      </span>
    </div>
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pl-10 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-a5onpft"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 dark:text-gray-500 pointer-events-none"
    >
      <span
        data-testid="right-icon"
      >
        ✓
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with clearable button 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-y0a76bl"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="Test"
    />
    <div
      aria-label="Eingabe löschen"
      className="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 dark:text-gray-500"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <svg
        className="h-5 w-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with clickable left icon 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400 dark:text-gray-500 cursor-pointer"
    >
      <span
        data-testid="left-icon"
      >
        @
      </span>
    </div>
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pl-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-b3clu2m"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with clickable right icon 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-6uijs40"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 dark:text-gray-500 cursor-pointer"
    >
      <span
        data-testid="right-icon"
      >
        ✓
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with counter 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-i90q2wk"
      maxLength={10}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="Hello"
    />
  </div>
  <div
    className="mt-1 text-xs text-right"
  >
    <span
      className="text-gray-500"
    >
      5
      /
      10
    </span>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom class name 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out custom-class"
      disabled={false}
      id="input-hevqqgt"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom container class name 1`] = `
<div
  className=" container-class"
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-k4y7z6l"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom error class name 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-errormessage="input-rylbye7-error"
      aria-invalid="true"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-red-500 dark:border-red-400 focus:ring-red-500 focus:border-red-500 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-rylbye7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-red-500"
      >
        ✕
      </span>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-red-600 dark:text-red-400 error-class"
      id="input-rylbye7-error"
      role="alert"
    >
      Error
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom helper text class name 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-16eoh50-helper"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-16eoh50"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 helper-class"
      id="input-16eoh50-helper"
    >
      Helper
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom input container class name 1`] = `
<div
  className=" "
>
  <div
    className="relative input-container-class"
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-cs9iptz"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom label class name 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1  label-class"
    htmlFor="input-8n8c48m"
  >
    Label
  </label>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-8n8c48m"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with custom success class name 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-68mi494-success"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-68mi494"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-green-600 dark:text-green-400 success-class"
      id="input-68mi494-success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with datalist 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-k6x31vg"
      list="options"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <datalist
    id="options"
  >
    <option
      value="Option 1"
    />
    <option
      value="Option 2"
    />
    <option
      value="Option 3"
    />
  </datalist>
</div>
`;

exports[`Input Snapshots renders correctly with default props 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-hpneccs"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with description for screen readers 1`] = `
<div
  className=" "
>
  <div
    className="sr-only"
    id="input-ekbwump-description"
  >
    Description for screen readers
  </div>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-ekbwump-description"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-ekbwump"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type color 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-v3z4w13"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="color"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type date 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-1ztimmd"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="date"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type datetime-local 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-y16q6s5"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="datetime-local"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type email 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-mmy0zdr"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="email"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type month 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-hk00tps"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="month"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type number 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-y582m1u"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="number"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type password 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-a6f2277"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="password"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type search 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-z0wwikw"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="search"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type tel 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-6yino0q"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="tel"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type text 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-6cbuieb"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type time 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-i6lkqlp"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="time"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type url 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-sls0nvc"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="url"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with different input types: Input with type week 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-b9k8e8o"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="week"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with error message 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-errormessage="input-uuowros-error"
      aria-invalid="true"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-red-500 dark:border-red-400 focus:ring-red-500 focus:border-red-500 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-uuowros"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-red-500"
      >
        ✕
      </span>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-red-600 dark:text-red-400 "
      id="input-uuowros-error"
      role="alert"
    >
      Username is required
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with extra large size 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-6 py-4 text-xl border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-2tt9c19"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with extra small size 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-2 py-1 text-xs border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-4qa9em0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with filled variant 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border-0 bg-gray-100 dark:bg-gray-800 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-ntbodio"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with flushed variant 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border-0 border-b-2 border-gray-300 dark:border-gray-600 rounded-none bg-transparent px-0 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-vkcc7r4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with full width 1`] = `
<div
  className="w-full "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-u9cu0vj"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with helper text 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-7venwf4-helper"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-7venwf4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 "
      id="input-7venwf4-helper"
    >
      Enter your username
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with hidden label 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1 sr-only "
    htmlFor="input-1da7rqc"
  >
    Hidden Label
  </label>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-1da7rqc"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with id 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="username-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with inputMode 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-c3mvgp2"
      inputMode="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with invalid state 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-red-500 dark:border-red-400 focus:ring-red-500 focus:border-red-500 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-98bkikp"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-red-500"
      >
        ✕
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with label 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1  "
    htmlFor="input-vbm08ri"
  >
    Username
  </label>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-vbm08ri"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with large size 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-5 py-3 text-lg border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-vgd3j88"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with left icon 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400 dark:text-gray-500 pointer-events-none"
    >
      <span
        data-testid="left-icon"
      >
        @
      </span>
    </div>
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pl-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-wv5a6xj"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with loading state 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-jfj0bcq"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-primary-500 animate-spin"
      >
        ⟳
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with medium size 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-9qs9mkg"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with min and max 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-sixiw6h"
      max={100}
      min={0}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="number"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with multiple props combined 1`] = `
<div
  className="w-full "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1  "
    htmlFor="input-7j8otcw"
  >
    Email
    <span
      aria-hidden="true"
      className="ml-1 text-red-500"
    >
      *
    </span>
  </label>
  <div
    className="relative "
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center text-gray-400 dark:text-gray-500 pointer-events-none"
    >
      <span
        data-testid="left-icon"
      >
        @
      </span>
    </div>
    <input
      aria-describedby="input-7j8otcw-helper"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pl-10 shadow-md rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-7j8otcw"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="name@example.com"
      readOnly={false}
      required={true}
      type="email"
    />
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 "
      id="input-7j8otcw-helper"
    >
      We'll never share your email
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with name 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-wqfh0uy"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with outline variant 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-qn6e5ea"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with password toggle 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-0whgksn"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="password"
    />
    <div
      aria-label="Passwort anzeigen"
      className="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 dark:text-gray-500"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <svg
        className="h-5 w-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M3.707 2.293a1 1 0 00-1.414 1.414l14 14a1 1 0 001.414-1.414l-1.473-1.473A10.014 10.014 0 0019.542 10C18.268 5.943 14.478 3 10 3a9.958 9.958 0 00-4.512 1.074l-1.78-1.781zm4.261 4.26l1.514 1.515a2.003 2.003 0 012.45 2.45l1.514 1.514a4 4 0 00-5.478-5.478z"
          fillRule="evenodd"
        />
        <path
          d="M12.454 16.697L9.75 13.992a4 4 0 01-3.742-3.741L2.335 6.578A9.98 9.98 0 00.458 10c1.274 4.057 5.065 7 9.542 7 .847 0 1.669-.105 2.454-.303z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with pattern 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-2zbxfqf"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      pattern="[A-Za-z]{3}"
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with placeholder 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-s1arkw0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Enter text here"
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with prefix 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-500 dark:text-gray-400"
    >
      <span
        data-testid="prefix"
      >
        $
      </span>
    </div>
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pl-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-e26apon"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with progress bar 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-xrssdg7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="mt-2 h-1 w-full bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="h-full bg-primary-500 transition-all duration-300 ease-in-out"
      role="progressbar"
      style={
        {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with right icon 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-huxf6kx"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 dark:text-gray-500 pointer-events-none"
    >
      <span
        data-testid="right-icon"
      >
        ✓
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with shadow 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 shadow-md rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-rm72aps"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with small size 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-8684pfh"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with spellCheck 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-azhuwqz"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      spellCheck={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with step 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-w6a3oac"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      step={0.5}
      type="number"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with success message 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-gjr55em-success"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-gjr55em"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-green-600 dark:text-green-400 "
      id="input-gjr55em-success"
    >
      Username is available
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with success state 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-green-500 dark:border-green-400 focus:ring-green-500 focus:border-green-500 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-f8igltf"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-green-500"
      >
        ✓
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with suffix 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-7wst6mv"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none text-gray-500 dark:text-gray-400"
    >
      <span
        data-testid="suffix"
      >
        kg
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with transparent background 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out bg-transparent"
      disabled={false}
      id="input-guzr3ql"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with unstyled variant 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border-0 bg-transparent px-0 py-0 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-bdl6q6l"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with valid state 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-green-500 dark:border-green-400 focus:ring-green-500 focus:border-green-500 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-172pi8o"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-green-500"
      >
        ✓
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with validation props combined 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1  "
    htmlFor="input-gluxboc"
  >
    Password
  </label>
  <div
    className="relative "
  >
    <input
      aria-describedby="input-gluxboc-success"
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 border-green-500 dark:border-green-400 focus:ring-green-500 focus:border-green-500 pr-10 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-gluxboc"
      maxLength={20}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="password"
      value="password123"
    />
    <div
      aria-label="Passwort anzeigen"
      className="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 dark:text-gray-500"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <svg
        className="h-5 w-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M3.707 2.293a1 1 0 00-1.414 1.414l14 14a1 1 0 001.414-1.414l-1.473-1.473A10.014 10.014 0 0019.542 10C18.268 5.943 14.478 3 10 3a9.958 9.958 0 00-4.512 1.074l-1.78-1.781zm4.261 4.26l1.514 1.515a2.003 2.003 0 012.45 2.45l1.514 1.514a4 4 0 00-5.478-5.478z"
          fillRule="evenodd"
        />
        <path
          d="M12.454 16.697L9.75 13.992a4 4 0 01-3.742-3.741L2.335 6.578A9.98 9.98 0 00.458 10c1.274 4.057 5.065 7 9.542 7 .847 0 1.669-.105 2.454-.303z"
        />
      </svg>
    </div>
    <div
      className="absolute inset-y-0 right-3 flex items-center"
    >
      <span
        aria-hidden="true"
        className="text-green-500"
      >
        ✓
      </span>
    </div>
  </div>
  <div
    className="mt-1 text-xs text-right"
  >
    <span
      className="text-gray-500"
    >
      11
      /
      20
    </span>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-green-600 dark:text-green-400 "
      id="input-gluxboc-success"
    >
      Strong password
    </p>
  </div>
</div>
`;

exports[`Input Snapshots renders correctly with value 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-xwdyhu2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      required={false}
      type="text"
      value="Test Value"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly without border 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-raahemq"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Input Snapshots renders correctly without rounded corners 1`] = `
<div
  className=" "
>
  <div
    className="relative "
  >
    <input
      className="block appearance-none w-full text-gray-900 dark:text-white placeholder-gray-400 dark:placeholder-gray-500 px-4 py-2 text-base border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-700 focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 focus:outline-none focus:ring-2 transition duration-150 ease-in-out"
      disabled={false}
      id="input-js39las"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>
</div>
`;
